--- a/sass/layouts/_features.scss
+++ b/sass/layouts/_features.scss
@@ -11,7 +11,7 @@
       
       
     &__item {
-        flex-basis: calc((100%-90px) / 4);
+        flex-basis: calc((100% - 90px) / 4);
       }
       
       
