--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -44,7 +44,7 @@
     position: relative;
   }
   
-  .navigation__link--current::after {
+  .current::after {
     position: absolute;
     content: "";
     left: 0;
